--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,15 @@
         "doctrine/dbal": "^3.7",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "illuminate/mail": "*",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.4",
         "nesbot/carbon": "^2.72",
-        "symfony/var-dumper": "^5.4"
+        "phpoffice/phpspreadsheet": "^1.12",
+        "symfony/var-dumper": "^5.4",
+        "webklex/laravel-imap": "^4.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
