--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "hot": "mix watch --hot",
     "prod": "npm run production",
     "production": "mix --production",
-    "build": "npm run production"
+    "build": "mix --production"
   },
   "devDependencies": {
     "axios": "^1.6.2",
